http/a/clean.css
html { background: #000 }
body {
	font-family: helvetica, sans-serif;
	-webkit-text-size-adjust: none;
	tab-size: 4;
	line-height: 1.2;
	color: #eee;
}
* {
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-overflow-scrolling: touch;
	-webkit-font-smoothing: antialiased;
	font-smoothing: antialiased;
}
::-webkit-input-placeholder {
	color: #555;
	font-size: 0.85em;
	line-height: 1.5em;
}
@keyframes target {
	0%, 30% {
		background: #950;
	}
}
@-webkit-keyframes target {
	0%, 30% {
		background: #950;
	}
}
:not(.target):target {
	animation: target 1s;
	-webkit-animation: target 1s;
}
.blk, img.center, textarea { display: block }
.ib { display: inline-block }
.inline, summary * { display: inline }
[hidden], .target:not(:target), #content > .sctrls { display: none }
.rel, .comment, .spoiler { position: relative }
.abs, .ctrls { position: absolute }
.fullwidth, input[type=text].fullwidth, input[type=password].fullwidth { width: 100% }
.maxwidth, img, input { max-width: 100% }
.lft, .user > * { float: left }
.rit, .user, h1 small, h2 small, .c-sig { float: right }
.nofloat { float: none }
.noumar, :not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(article):not(small):not(blockquote) > :first-child:not(span):not(textarea), .comment > :last-child { margin-top: 0 }
.nomar, body, input, .comment .hover *, fieldset, textarea, .error * { margin: 0 }
.tumar, form *, .comment > blockquote:nth-child(2), .comment > pre:nth-child(2) { margin-top: 2px }
.sumar, :not(img) + .desc, .blk { margin-top: 4px }
.umar, :not(.row):not(.flex):not(.resp-flex) > section:not(:first-child), article:not(:first-child), form:not([action="/search/"]), #footer { margin-top: 6px }
.bumar, h1:not(:first-child), fieldset:not(:first-of-type) { margin-top: 8px }
.bmar, .max-width, .error, #notifs li { margin-bottom: 6px }
.lftpad, .user { margin-left: 6px }
.indt { margin-left: 32px }
.pad, a.center-text.blk, .desc, #content, #footer, .error, .popup, code.blk, .comment { padding: 4px }
.noborder, iframe { border: none }
.scrl { overflow: auto }
.scrlx { overflow-x: auto }
.scrly { overflow-y: auto }
.noscrl, .comment > :last-child, blockquote { overflow: hidden }
.br, .desc { border-radius: 4px }
.hglt, .desc, .comment, article { background: #333 }
.shglt { background: #444 }
iframe:not([seamless]) { background: #fff }
.mono, .ctrls { font-family: monospace }
.ctrls a { padding: 0 2px }
.grey, a.small, .c-sig, .ctrls a { color: #aaa }
.disabled, a.disabled:hover, a.disabled:active { color: #666 }
abbr { border-bottom: 1px dashed #222 }
.reference { color: #080 }
small, a.small, a.grey, .c-sig > *, .c-sig, .ctrls a, footer, #nav a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, .user a, .c-sig a, .ctrls a { text-decoration: none }
small, a.small, footer, .ctrls a { font-size: 0.85em }
.c-sig { font: 0.8rem helvetica, sans-serif }
.red { color: #f00 }
.large { font-size: 1.2em }
.larger, .ctrls { font-size: 1.4em }
.column-small { column-width: 10em }
.column-medium { column-width: 16em }
.column-large { column-width: 24em }
.max-width { max-width: 448px }
.iframe-16-9 {
	position: relative;
	width: 100%;
	height: 0;
	padding-bottom: 56.25%;
}
.iframe-16-9 iframe {
	position: absolute;
	width: 100%;
	height: 100%;
}
.flexcont {
	display: flex;
	flex-wrap: wrap;
}
.flexcont > * { flex-grow: 1 }
.highlight {
	color: #fff;
	background: #000;
}
del { background: #f88 }
ins { background: #8f8 }
del, ins { line-height: 1.3 }
li {
	-webkit-column-break-inside: avoid;
	page-break-inside: avoid;
	break-inside: avoid-column;
}
.justify { text-align: justify }
.justify::after {
	content: '';
	display: inline-block;
	width: 100%;
}
.answer-count {
	display: inline-block;
	font-style: normal;
	padding: 3px;
	background: #6bf;
	border-radius: 4px;
	color: #000;
}
.limited, .large-limited {
	max-height: 72px;
	overflow: hidden;
}
.large-limited { max-height: 144px }
.spoiler { transition: color 0.2s }
.spoiler:not(:hover) { color: transparent }
.spoiler:not(:hover) *, .spoiler:hover::before { opacity: 0 }
.spoiler::before {
	content: 'hover to see spoiler';
	position: absolute;
	padding: 0.3em;
	color: #aaa;
	transition: opacity 0.2s;
}
.focused { outline: 3px solid #8bf }
.ta-cont {
	width: 100%;
	position: relative;
	overflow-x: hidden; overflow-y: auto;
	border: 1px solid #fff;
}
.code, .code-display {
	display: block;
	min-height: calc(100% - 2px);
	padding: 0;
	margin: 2px;
	color: #fff;
	background: transparent;
	font-family: monospace;
	white-space: pre-wrap;
	font-size: 1rem;
	line-height: 1.2;
	resize: none;
	outline: none;
	border: none;
	padding-left: 4px;
}
.code {
	position: absolute;
	top: 0; right: 0;
	z-index: 1;
	color: transparent;
}
.code-display {
	width: calc(100% - 4px);
	border-left: 1px solid #444;
	padding-right: 1px;
}
#caret {
	position: absolute;
	background: #fff;
	width: 1px;
	margin-right: -1px;
}
code .line::before {
	left: 0;
	content: attr(data-linenum);
	color: #aaa;
	display: inline-block;
	-webkit-user-select: none;
	-moz-user-select: none;
	user-select: none;
	padding: 0 2px 0 4px;
	position: absolute;
}
code .line.warning::before {
	color: #ff6;
	font-weight: bold;
}
.ta-cont[data-line="0"] { padding-left: 0.8em }
.ta-cont[data-line="1"] { padding-left: 1.3em }
.ta-cont[data-line="2"] { padding-left: 1.8em }
.ta-cont[data-line="3"] { padding-left: 2.3em }
.ta-cont[data-line="4"] { padding-left: 2.8em }
.ta-cont[data-line="5"] { padding-left: 3.3em }
.ta-cont[data-line="6"] { padding-left: 3.8em }
.ta-cont[data-line="7"] { padding-left: 4.3em }
.ta-cont[data-line="0"] textarea { width: calc(100% - 0.8rem - 5px) }
.ta-cont[data-line="1"] textarea { width: calc(100% - 1.3rem - 5px) }
.ta-cont[data-line="2"] textarea { width: calc(100% - 1.8rem - 5px) }
.ta-cont[data-line="3"] textarea { width: calc(100% - 2.3rem - 5px) }
.ta-cont[data-line="4"] textarea { width: calc(100% - 2.8rem - 5px) }
.ta-cont[data-line="5"] textarea { width: calc(100% - 3.3rem - 5px) }
/* ... */

